# ai-document-analyst

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
evaluation/: eval_dataset.json  run_eval.py
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: ChatMessage.jsx  DocumentList.jsx  FileUpload.jsx  QueryBar.jsx  ToastContainer.jsx
frontend/src/hooks/: useToast.js
frontend/src/utils/: api.js
src/: config.py  models.py
src/api/: document_store.py  main.py  schemas.py
src/api/middleware/: logging.py  timing.py
src/api/routes/: documents.py  query.py  upload.py
src/generation/: generator.py  prompts.py
src/ingestion/: chunker.py  embedder.py  parser.py
src/retrieval/: bm25_search.py  fusion.py  reranker.py  vector_search.py
tests/: conftest.py  test_api.py  test_chunker.py  test_generation.py  test_parser.py  test_retrieval.py
